--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "4.1.3",
+    "font-awesome": "4.7.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "styled-components": "5.2.0"
   },
   "devDependencies": {
     "typescript": "3.8.3"
