--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "font-awesome": "4.7.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
+    "react-paypal-express-checkout": "1.0.5",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "5.2.0"
