--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "emmet": "2.1.6",
     "font-awesome": "4.7.0",
     "react": "16.14.0",
+    "react-burger-menu": "2.9.0",
     "react-dom": "16.14.0",
     "react-paypal-express-checkout": "1.0.5",
     "react-router-dom": "5.2.0",
